--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-copy": "~0.8.1",
-    "watch": "~0.16.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-shell": "^2.1.0",
+    "watch": "~0.16.0"
   }
 }
